[4/18/2014]
-Linux Version 3.4.87
-Removed CPUQUIET Power Management
-TIME: update some functions of timekeeping.c to latest CAF
-Resolve CPUFREQ_NOTIFY issue
-enable quad core cpu stats
-ACPUCLOCK: scale L2 cache and CPU freqs in sync CPU speed and L2 cache
-decrease PHY_SUSPEND_TIMEOUT_USEC to 200 (from 500)
-Keep HSIC in Low Power Mode
-Prevent system suspend when HSIC device is active
-qdsp6v2: Propagate device HW delay to AFE
-Added Buffer overflow check 
-switched to arm-cortex_a15-linux-gnueabihf-linaro_4.8.3-2014.04 toolchain
-SELinux: Reduce overhead of mls_level_isvalid() function call 
-kernel: Replace timeconst.pl with a bc script
-tcp small queues
-fix conflicting types for tcp_write_xmit 
-tcp: add auto corking feature 
-tcp: network speed tweak 
-remove a lot of debugging
-Make GENTLE_FAIR_SLEEPERS configurable thru sysfs 
-Memory allocated by kstrdup should be freed
-Try setting slub_max_order to zero
-Adjust dirty writeback for IO boost
-Always set noatime no diratime on all partitions! I/O Boost!

[4/17/2014]
-Added CPUQuiet Power Management by @maxwen
-introduce OndemandPLUS governor
-Sound Mods (thicklizard)
-add more linaro build flags....
-fgraphite, -ftree-slp-vectorize, -fvect-cost-model, -ftree-partial-pre, -fipa-cp-clone,-mvectorize-with-neon-quad to name a few
-switch to CONFIG_CC_OPTIMIZE_ALOT or -O3

[4/15/2014]
-introduce PRESERVATIVE governor by @bedalus
-increase BUS frequencies
-removing media_tuner @poondog
-Optimize build_sched_domains() for saving first SD node
-Create for_each_sd_topology()
-remove handset pop-noise
-Add slimbus device driver unregistration function
-Handle channel control correctly if controller manages BW
-Fix pop noise seen with touch tone during playback
-Control interface clock if it's specified
-Add PCM creation API for internal PCMs
-use generic atomic_dec-based implementation for ARMv6+
-Reduce overhead under high-freq idling patterns

[4/14/2014]
-Fix Z180 memory leak
-Linux 3.4.20-3.4.40