@@ -94,6 +94,7 @@ run_program("/tmp/abootimg", "-x", "/tmp/boot.img", "/tmp/bootimg.cfg", "/tmp/zI
 run_program("/tmp/max_oc.sh");
 run_program("/tmp/edit_ramdisk.sh");
 run_program("/tmp/abootimg", "-u", "/tmp/boot.img", "-f", "/tmp/cmdline.cfg", "-k", "/tmp/lemur.zImage", "-r", "/tmp/initrd.img");
+run_program("/tmp/compatibility.sh");
 
 set_progress(0.8);
 
